# Starting-Deep-Learning

./: .gitignore  README.md
dl-package/: pyproject.toml
dl-package/dl_package/: Housing.ipynb  Mammals.ipynb  Perceptron.ipynb  Reuters.ipynb
dl-package/dl_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dl-package/sp-package/: pyproject.toml
dl-package/sp-package/sp_package/: SP.ipynb
dl-package/sp-package/sp_package/.ipynb_checkpoints/: SP-checkpoint.ipynb
dl-package/sp-package/tests/: test_sp_package.py
dl-package/tests/: test_dl_package.py
