[tool.poetry]
name = "dl-package"
version = "0.1.0"
description = ""
authors = ["kjdeluna <kbdeluna@up.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.12"
gensim = "^3.7"
scikit-learn = "^0.20.2"
pandas = "^0.24.1"
numpy = "^1.16"
nltk = "^3.4"
beautifulsoup4 = "^4.7"
keras = "^2.2"
np_utils = "^0.5.9"
jupyter = "^1.0"
matplotlib = "^3.0"
mpld3 = "^0.3.0"
tflearn = "^0.3.2"
windows-curses = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
